# NOR

./: .gitignore  Hallo.txt  LICENSE.md  LICENSE.txt  README.md  README.txt  questions.txt  todo.txt
NOR/: mainwindow.cpp
doc/: Finales_Klassendiagramm.mdj  Lastenheft.docx  klassendiagramm_1.mdj  ~$stenheft.docx
doc/Protokolle/: Protokoll_13.01.2020.txt  Protokoll_17.02.2020.txt  Protokoll_2020-02-05.txt  Protokoll_2020-02-24.txt  Protokoll_2020-03-02.txt  protokoll_2020-01-20.txt  protokoll_2020-01-27.txt
doc/doxygen/: doxygen
doxygen/: Doxyfile
examples/: simple_network.json
src/: CMakeLists.txt  NOR.pro  application.cpp  application.h  defines.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pictures.qrc
src/img/: NOR.icns  Zf_Logo.icns  resistorLogo.icns
src/model/: ComponentPort.cpp  ComponentPort.h  calculator.cpp  calculator.h  commands.cpp  commands.h  component.cpp  component.h  componentport.cpp  componentport.h  connection.cpp  connection.h  description.cpp  description.h  descriptionfield.cpp  descriptionfield.h  filemanager.cpp  filemanager.h  graphicsobject.h  gridobject.cpp  gridobject.h  model.cpp  model.h  networkgraphics.cpp  networkgraphics.h  node.h  powersupply.cpp  powersupply.h  puzzlecalculator.cpp  puzzlecalculator.h  resistor.cpp  resistor.h  rowpiece.cpp  rowpiece.h
src/view/: aboutbox.cpp  aboutbox.h  aboutbox.ui  aboutview.ui  editingview.cpp  editingview.h  editview.cpp  editview.h  editview.ui  editview.ui.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkgraphics.cpp  networkgraphics.h  networkview.cpp  networkview.h  powerview.cpp  powerview.h  powerview.ui  resistorviewelement.cpp  resistorviewelement.h
